--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+                          <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Git Example</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1>Git Example</h1>
+    <p>This webpage is made to test out differnt git features.</p>
+    <img src="">
+    <button onclick="showPicture()">Click Me</button>
     <script src="script.js"></script>
   </body>
 </html>
