added id on picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Git Example</h1>
     <p>This webpage is made to test out differnt git features.</p>
-    <img src="">
+    <img id="hidden" src="">
     <button onclick="showPicture()">Click Me</button>
     <script src="script.js"></script>
   </body>
